tests/analyze/if-subject-not-bool/analyze.snap
---
source: tests/analyze.rs
assertion_line: 41
expression: output
---
error: Type mismatch: expected `bool`, but found `int`.
> 5 | 	if 42 {
          ^^
